# usaspending-mcp-server

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  server.py
.github/workflows/: actions.yaml  docker.yaml  lint.yaml  test.yaml  tests.yml
src/: server.py
src/prompts/: award_type_codes.py  general_guidance.py
src/resources/: award_type_codes.py  toptier_agencies.json  toptier_agencies.py
src/tools/: config.py
src/tools/v2/: federal_accounts.py  recipient.py  spending.py  subawards.py  subawards_schemas.py
src/tools/v2/budget_functions/: list_budget_functions.py
src/tools/v2/federal_accounts/: federal_accounts.py  federal_accounts_schemas.py
src/tools/v2/financial_spending/: major_object_class.py  major_object_class_schemas.py
src/tools/v2/recipient/: recipient.py  recipient_schemas.py
src/tools/v2/references/: toptier_agencies.py  toptier_agencies_custom.py  total_budgetary_resources.py  total_budgetary_resources_schemas.py
src/tools/v2/references/toptier_agencies/: toptier_agencies.py  toptier_agencies_custom.py  toptier_agencies_schemas.py
src/tools/v2/references/total_budgetary_resources/: total_budgetary_resources.py
src/tools/v2/search/: config.py  spending_by_award.py  spending_over_time.py
src/tools/v2/search/spending_by_award/: spending_by_award.py  spending_by_award_schemas.py
src/tools/v2/search/spending_over_time/: spending_over_time.py  spending_over_time_schemas.py
src/tools/v2/spending/: spending.py  spending_schemas.py
src/utils/: dates.py  http.py
test/: mcp-client.py
tests/: README.md  mcp-client.py  test_dates.py  test_http.py  test_schemas.py  test_tool_handlers.py  test_toptier_agencies_custom.py  validation.py
tools/v2/: federal_accounts.py  federal_obligations.py  recipient.py  spending.py  subawards.py  transactions.py
tools/v2/awards/count/federal_account/: award_id.py
tools/v2/budget_functions/: list_budget_functions.py
tools/v2/financial_spending/: major_object_class.py
tools/v2/recipient/: state.py
tools/v2/references/: toptier_agencies.py  total_budgetary_resources.py
tools/v2/search/: spending_by_award.py
utils/: http.py
