[project]
name = "usaspending-mcp-server"
version = "0.1.2"
description = "This is an MCP server to interact with the USASPENDING.gov API"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Thomas Smale", email = "tom.snail.mail@gmail.com" }]
license = "MIT"
dependencies = [
    "anyio>=4.11.0",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "jsonschema>=4.25.1",
    "mcp>=1.16.0",
    "starlette>=0.48.0",
    "uvicorn>=0.37.0",
]
[dependency-groups]
dev = [
    "openai-agents>=0.4.0",
    "ruff==0.9.2",
]

[project.scripts]
usaspending-mcp-server = "server:main"

[project.urls]
Repository = "https://github.com/thsmale/usaspending-mcp-server"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/server.py",
    "src/tools",
    "src/utils",
]

[tool.hatch.build]
exclude = [
    "test",
    ".vscode",
    "*.md",
    ".github",
]
